social insurance part done

--- a/app/assets/stylesheets/tax.css.sass
+++ b/app/assets/stylesheets/tax.css.sass
@@ -1,4 +1,9 @@
 .social-security-form
-  td
-    width: 150px
+  th, td
     text-align: center
+    input
+      width: 25px
+    span
+      margin: 0 5px
+  tr.sum
+    background: lightblue
