增加平均工资的计算

--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -28,7 +28,7 @@ html lang="en"
           a.brand href="#"ChinaTax
           .container.nav-collapse
             ul.nav
-              li= link_to "Link 1", "/path1"
+              li= link_to "Taxes", taxes_path
               li= link_to "Link 2", "/path2"
               li= link_to "Link 3", "/path3"
 
@@ -44,7 +44,7 @@ html lang="en"
             h3 Sidebar
             ul.nav.nav-list
               li.nav-header Sidebar
-              li= link_to "Link 1", "/path1"
+              li= link_to "Taxes", taxes_path
               li= link_to "Link 2", "/path2"
               li= link_to "Link 3", "/path3"
     
