--- a/app/assets/stylesheets/tax.css.sass
+++ b/app/assets/stylesheets/tax.css.sass
@@ -3,5 +3,8 @@
     text-align: center
     input
       width: 25px
+      text-align: right
     span
       margin: 0 5px
+      text-align: right
+    width: 55px
