增加是否使用平均工资的配置选项

--- a/app/assets/stylesheets/tax.css.sass
+++ b/app/assets/stylesheets/tax.css.sass
@@ -1,4 +1,7 @@
 .social-security-form
+  table
+    th
+      vertical-align: middle
   th, td
     text-align: center
     input
@@ -7,4 +10,18 @@
     span
       margin: 0 5px
       text-align: right
-    width: 55px
+  td.amount
+    width: 80px
+
+  th.success, td.success
+    background-color: #dff0d8 !important
+
+  th.error, td.error
+    background-color: #f2dede !important
+
+  th.warning, td.warning
+    background-color: #fcf8e3 !important
+
+  th.info, td.info
+    background-color: #d9edf7 !important
+
